Implement allow lists for submission_type_selection placement
Only LTI tools on the allow list are visible in the submission type dropdown
There is an allow list for developer key based selection (for LTI 1.3 tools)
and a domain based one for 1.1 and 1.3 tools

closes: INTEROP-8466

test:
- Add an LTI tool with submission_type_selection placement
- Go to Assignments and click on create
- Submission type dropdown should contain the LTI tool
- Turn on lti_placement_restrictions FF
- When you create an assignment the LTI tool is not listed anymore
- In Rails console add the related developer key to 'submission_type_selection_allowed_dev_keys' setting
- The dropdown will contain the LTI tool
- Remove the previous setting and set on for the domain using 'submission_type_selection_allowed_launch_domains'
- The dropdown will contain the LTI tool

Change-Id: I45b5453df3dbac257eac7535efba59b15d7eeaf5
Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/341153
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
Reviewed-by: Tucker Mcknight <tmcknight@instructure.com>
QA-Review: Tucker Mcknight <tmcknight@instructure.com>
Product-Review: Bence Árpási <bence.arpasi@instructure.com>

--- a/config/feature_flags/interop_release_flags.yml
+++ b/config/feature_flags/interop_release_flags.yml
@@ -246,3 +246,18 @@ allow_lti_tools_editor_button_placement_without_icon:
       state: allowed_on
     ci:
       state: allowed_on
+lti_placement_restrictions:
+  state: hidden
+  applies_to: RootAccount
+  display_name: Limit certain LTI placements to authorized tools
+  description: |-
+    When enabled, Submission_type_selection placement usage will be
+    limited with an allow list.
+  shadow: true
+  environments:
+    development:
+      state: allowed_on
+    test:
+      state: allowed_on
+    ci:
+      state: allowed_on
