--- a/config/feature_flags/interop_release_flags.yml
+++ b/config/feature_flags/interop_release_flags.yml
@@ -136,6 +136,38 @@ include_oauth_consumer_key_in_lti_launch:
     When enabled, LTI 1.3 launches that would be associated with LTI 1.1 tool
     if the LTI 1.3 tool wasn't present will include the oauth_consumer_key and
     oauth_consumer_key_sign properties as part of the LTI 1.1 claims section.
+developer_key_consortia_fix_inheritance_logic:
+  state: hidden
+  applies_to: RootAccount
+  shadow: true
+  display_name: Consistent inheritance logic for Developer Keys in non-CMC consortia
+  description: |-
+    When enabled for a child account of a non-centrally managed consortium,
+    developer key state and tokens from the consortium parent will not be
+    inherited to subaccounts of a consortium child. When disabled, the legacy
+    (inconsistent) behavior is followed. This flag applies only to consortium
+    _child_ accounts. This flag does not affect centrally-managed consortia in
+    any way.
+  environments:
+    development:
+      state: allowed_on
+    test:
+      state: allowed_on
+    ci:
+      state: allowed_on
+developer_key_consortia_stop_tool_management_from_parent:
+  state: allowed_on
+  applies_to: RootAccount
+  shadow: true
+  display_name: Prevent non-CMC consortium parent dev key from affecting tools in children
+  description: |-
+    When enabled for the parent account of a non-centrally managed consortium,
+    turning on/off developer keys in the parent will not affect the tool
+    installs of the child accounts. When disabled, turning on/off
+    SiteAdmin-inherited developer keys in the parent account of a non-centrally
+    managed consortium will affect (delete/restore) tools in the children
+    accounts (legacy behavior). This flag applies only to consortium _parent_
+    accounts. This flag does not affect centrally-managed consortia in any way.
 resource_link_uuid_in_custom_substitution:
   state: hidden
   display_name: Use a Resource link's resource_link_uuid in the $ResourceLink.id substitution parameter
