--- a/spec/lib/token_scopes/last_known_scopes.yml
+++ b/spec/lib/token_scopes/last_known_scopes.yml
@@ -2151,6 +2151,12 @@
   path: "/api/v1/courses/:course_id/quizzes/:quiz_id/date_details"
 - verb: GET
   path: "/api/v1/courses/:course_id/modules/:context_module_id/date_details"
+- verb: GET
+  path: "/api/v1/courses/:course_id/discussion_topics/:discussion_topic_id/date_details"
+- verb: GET
+  path: "/api/v1/courses/:course_id/pages/:page_id/date_details"
+- verb: GET
+  path: "/api/v1/courses/:course_id/files/:attachment_id/date_details"
 - verb: PUT
   path: "/api/v1/courses/:course_id/assignments/:assignment_id/date_details"
 - verb: PUT
