Scaffold LTI Extensions page
This commit adds a scaffolded FE for the LTI extensions page in Canvas

test plan:

Go to Admin -> Extensions and click between Manage/Discover to make sure
the routing works and reload pages to make sure the nested urls work.

Turn the lti_registrations_discover_page feature flag off to make sure
the page the discover page is not accessible, and then turn the
lti_registrations_page off to make sure the whole extensions view is
not accessible.

fixes: INTEROP-8515
flag=lti_registrations_page

Change-Id: I7d34b387d03a4bce66325a4791645c6502784b12
Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/341783
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
Reviewed-by: Steve Mcgee <steve.mcgee@instructure.com>
QA-Review: Steve Mcgee <steve.mcgee@instructure.com>
Product-Review: Paul Gray <paul.gray@instructure.com>

--- a/config/feature_flags/interop_release_flags.yml
+++ b/config/feature_flags/interop_release_flags.yml
@@ -261,3 +261,22 @@ lti_placement_restrictions:
       state: allowed_on
     ci:
       state: allowed_on
+lti_registrations_page:
+  state: hidden
+  applies_to: RootAccount
+  display_name: LTI Extensions Page
+  description: |-
+    When enabled, the LTI Extensions page will be available in the Account navigation.
+  environments:
+    development:
+      state: hidden
+lti_registrations_discover_page:
+  state: hidden
+  applies_to: RootAccount
+  display_name: LTI Extensions Discover Page
+  description: |-
+    When enabled, the LTI Extensions Discover page will be available in the Extensions view.
+  environments:
+    development:
+      state: hidden
+  custom_transition_proc: lti_registrations_discover_page_hook
