--- a/config/feature_flags/interop_release_flags.yml
+++ b/config/feature_flags/interop_release_flags.yml
@@ -223,6 +223,13 @@ assignment_edit_placement_not_on_announcements:
   display_name: Allows LTI tools with assignment_edit placement to be launched on Announcements page
   description: |-
     When enabled, an LTI tool with the assignment_edit placement will be launched on the Announcement page.
+update_assignment_submission_type_launch_button:
+  state: hidden
+  applies_to: SiteAdmin
+  display_name: Update the assignment submission type launch button
+  description: |-
+    Update the look of all tools using the submission_type_selection
+    placement to be a more modern design in line with the rest of Canvas' UI
   environments:
     development:
       state: allowed_on
