feat: :pushpin: Add Gemfile.rails70.plugins.lock for analytics gems version

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,6 @@ schema.graphql
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# cool
+!/Gemfile.rails70.plugins.lock
