--- a/.dockerignore
+++ b/.dockerignore
@@ -8,6 +8,8 @@
 .devcontainer
 .github
 .gitlab
+.ruby-lsp
+.storybook
 .vscode
 
 build/
@@ -50,34 +52,13 @@ mkmf.log
 .gitmessage
 .travis.yml
 code_of_conduct.md
-CONTRISBUTING.md
+CONTRIBUTING.md
 COPYRIGHT
-docker-compose.new-jenkins.yml
-docker-compose.new-jenkins-karma.yml
-docker-compose.new-jenkins.consumer.yml
-docker-compose.new-jenkins.vendored-gems.yml
-docker-compose.new-jenkins.canvas.yml
-docker-compose.new-jenkins-selenium.yml
-docker-compose.new-jenkins-package-translations.yml
-docker-compose.new-jenkins-flakey-spec-catcher.yml
+docker-compose.new-jenkins*.yml
 docker-compose.override.yml
 docker-compose.spring.yml
-Dockerfile.githook
-Dockerfile.package-translations
 issue_template.md
-Jenkinsfile.contract-tests
-Jenkinsfile.vendored-gems
-Jenkinsfile.master-bouncer-check-all
-Jenkinsfile.xbrowser
-Jenkinsfile.dive
-Jenkinsfile.selenium.performance.chrome
-Jenkinsfile.test-subbuild
-Jenkinsfile.js
-Jenkinsfile.package-translations
-Jenkinsfile
-Jenkinsfile.selenium.flakey_spec_catcher
+Jenkinsfile*
+Dockerfile*
 LICENSE
 README.md
-ruby.Dockerfile
-ubuntu.development.Dockerfile
-ubuntu.production.Dockerfile
