Update Dockerfile.cool & .devcontainer/Dockerfile #524

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -43,8 +43,10 @@ ENV NODE_OPTIONS=--openssl-legacy-provider
 ARG YARN_VERSION=1.19.1
 ARG PASSENGER_VERSION=6.0.19
 ARG RUBY_VERSION=3.1
-ARG BUNDLER_VERSION=2.4.19
+ARG BUNDLER_VERSION=2.5.9
 ENV BUNDLER_VERSION=${BUNDLER_VERSION}
+ARG CANVAS_RAILS=7.0
+ENV CANVAS_RAILS=${CANVAS_RAILS}
 
 #
 # Set up apt packages
